--- a/examples/1-basic-tree/index.html
+++ b/examples/1-basic-tree/index.html
@@ -6,6 +6,7 @@
   <title>basic-tree-1</title>
   <link rel="shortcut icon" type="image/svg" href="/examples/logo.svg">
   <script src="../plugins/d3.v6.js"></script>
+  <script src="../../dist/family-chart.min.js"></script>
   <link rel="stylesheet" href="/src/styles/family-chart.css">
 
 </head>
